# orchard-flow

./: CMakeLists.txt  CODE_REVIEW_FINDINGS.md  EXECUTION_ROADMAP_V1.md  README.md  TECH-SPEC.md
.github/workflows/: deterministic-validation.yml
bc/: boundary_conditions.hpp
benchmarks/: channel_couette_128.cfg  channel_couette_smoke.cfg  channel_poiseuille_128.cfg  channel_poiseuille_smoke.cfg  lid_driven_cavity_re100_128.cfg  lid_driven_cavity_re100_128_cfl025.cfg  lid_driven_cavity_smoke.cfg  taylor_green_128.cfg  taylor_green_smoke.cfg
core/: aligned_buffer.hpp  field_layout.hpp  fields.hpp  grid.hpp
linsolve/: CMakeLists.txt  poisson_solver.cpp  poisson_solver.hpp
metal/: taylor_green_backend.hpp  taylor_green_backend.metal  taylor_green_backend.mm
operators/: CMakeLists.txt  discrete_operators.cpp  discrete_operators.hpp
profiling/: run_profile_suite.py
profiling/latest/: hardware.md  hotspot_summary.csv  hotspot_summary.md  kernel_microbenchmarks.csv  policy_study.csv  (+7 more)
solver/: CMakeLists.txt  channel_flow.cpp  channel_flow.hpp  lid_driven_cavity.cpp  lid_driven_cavity.hpp  momentum_terms.cpp  momentum_terms.hpp  operator_verification.cpp  operator_verification.hpp  projection.cpp  projection.hpp  taylor_green.cpp  taylor_green.hpp
tests/: CMakeLists.txt  test_runtime.cpp
tools/: CMakeLists.txt  advection_profile_main.cpp  channel_flow_main.cpp  example_main.cpp  lid_driven_cavity_main.cpp  operator_mms_main.cpp  pressure_profile_main.cpp  taylor_green_main.cpp
validation/: BENCHMARK_SUITE.md  benchmark_suite.csv  run_validation_suite.py
(+15 files in other folders)
